# gaimersheim-a2d2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  calibration.py  camera.json  gaussian.jl  opencv_video_player.jl  video_io_player.jl  visual_navigation.jl
data/images/: camera.xml
src/: camera.py  gaussian.py  main.cpp  navigation.cpp  navigation.h  rerunplayer.py  run.py  run_visual_navigation.py  system_estimator.py  system_vslam.py  validate_calibration.py
tests/: test_camera.py  test_gaussian.jl  test_gaussian.py
